Changelog
=========

1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2017-07-11)
------------------

- Make sure vocabularies are included. Refs #15448
  [reinhardt]


1.0.0 (2017-01-27)
------------------

- Initial release