@@ -1,0 +1,156 @@
+<tal:block tal:define="isDiscussionAllowed view/is_discussion_allowed"
+           tal:condition="isDiscussionAllowed"
+           i18n:domain="recensio">
+<tal:block define="userHasReplyPermission view/can_reply;
+                   isAnonymousDiscussionAllowed view/anonymous_discussion_allowed;
+                   isAnon view/is_anonymous;
+                   canReview view/can_review;
+                   replies python:view.get_replies(canReview);
+                   has_replies python:view.has_replies(canReview);
+                   showCommenterImage view/show_commenter_image;
+                   errors options/state/getErrors|nothing;
+                   wtool context/@@plone_tools/workflow;">
+
+    <div class="reply"
+         tal:condition="python:isAnon and not isAnonymousDiscussionAllowed">
+        <form tal:attributes="action view/login_action">
+            <input class="standalone"
+                   type="submit"
+                   value="Log in to add comments"
+                   i18n:attributes="value label_login_to_add_comments;"
+                   />
+        </form>
+    </div>
+
+    <div class="discussion"
+         tal:attributes="class python: showCommenterImage and 'discussion showCommenterImage' or 'discussion';"
+         tal:condition="has_replies">
+        <tal:getreplies repeat="reply_dict replies">
+
+            <div class="comment"
+                 tal:define="reply reply_dict/comment;
+                             depth reply_dict/depth|python:0;
+                             author_home_url python:view.get_commenter_home_url(username=reply.author_username);
+                             has_author_link python:author_home_url and not isAnon;
+                             review_state python:wtool.getInfoFor(reply, 'review_state');"
+                 tal:attributes="class python:'comment replyTreeLevel'+str(depth)+' state-'+str(review_state);
+                                 style string:margin-left: ${depth}em;
+                                 id string:${reply/getId}"
+                 tal:condition="python:canReview or review_state == 'published'">
+
+                <div class="documentByLine" i18n:domain="plone.app.discussion">
+                    <tal:name>
+                        <a href=""
+                           tal:condition="has_author_link"
+                           tal:content="reply/author_name"
+                           tal:attributes="href author_home_url">
+                            Poster Name
+                        </a>
+                        <span tal:condition="not: has_author_link"
+                              tal:replace="reply/Creator" />
+                        <span tal:condition="not: reply/Creator">Anonymous</span>
+                    </tal:name>
+                    <tal:posted i18n:translate="label_says">says:</tal:posted>
+                    <div class="commentDate"
+                         tal:content="python:view.format_time(reply.modification_date)">
+                         8/23/2001 12:40:44 PM
+                    </div>
+                </div>
+
+                <div class="commentBody">
+
+                    <span tal:replace="structure reply/getText" />
+
+                    <div class="commentActions">
+                        <form name="delete"
+                              action=""
+                              method="post"
+                              tal:condition="canReview"
+                              tal:attributes="action string:${reply/absolute_url}/@@moderate-delete-comment">
+                            <input name="form.button.DeleteComment"
+                                   class="destructive"
+                                   type="submit"
+                                   value="Delete"
+                                   i18n:attributes="value label_delete;"
+                                   />
+                        </form>
+
+                        <!-- Workflow actions (e.g. 'publish') -->
+                        <form name=""
+                              action=""
+                              method="get"
+                              tal:condition="canReview"
+                              tal:repeat="action reply_dict/actions|nothing"
+                              tal:attributes="action string:${reply/absolute_url}/@@moderate-publish-comment;
+                                              name action/id">
+                            <input type="hidden" name="workflow_action" tal:attributes="value action/id" />
+                            <input name="form.button.PublishComment"
+                                   class="context"
+                                   type="submit"
+                                   tal:attributes="value action/title"
+                                   i18n:attributes="value"
+                                   />
+                        </form>
+                        <a class="problematic_comment" href="mailto:"
+                           title="NOTIFICATION: possible problematic comment"
+                           tal:attributes="href string:mailto:${view/getMailTarget}?subject=${view/escaped_title}${reply/getId};
+                                           title string: ${view/title}${reply/getId}"
+                           i18n:translate="notify_portal_owner">
+                            Notify portal owner about this comment
+                        </a>
+                     </div>
+
+
+                </div>
+                <button class="context reply-to-comment-button hide allowMultiSubmit"
+                        tal:condition="python:isDiscussionAllowed and (isAnon and isAnonymousDiscussionAllowed or userHasReplyPermission)"
+                        i18n:translate="label_reply">
+                    Reply
+                </button>
+            </div>
+
+        </tal:getreplies>
+    </div>
+
+    <div class="reply"
+         tal:condition="python:has_replies and (isAnon and not isAnonymousDiscussionAllowed)">
+        <form tal:attributes="action view/login_action">
+            <input class="standalone"
+                   type="submit"
+                   value="Log in to add comments"
+                   i18n:attributes="value label_login_to_add_comments;"
+                   />
+        </form>
+    </div>
+
+    <div id="commenting" class="reply" tal:condition="python:isDiscussionAllowed and (isAnon and isAnonymousDiscussionAllowed or userHasReplyPermission)">
+
+        <div class="message notice">
+          <h2 i18n:translate="heading_commenting_explanation">Kommentieren</h2>
+<p i18n:translate="commenting_explanation_no_email">Sie haben hier die Gelegenheit, die Rezension/Präsentation zu kommentieren. Dafür ist eine kurze, kostenlose Registrierung mit Namen und E-Mail-Adresse notwendig, die lediglich dazu dient, Missbrauch der Kommentarfunktion zu verhindern und den wissenschaftlichen Anspruch der Plattform zu wahren.
+<br />
+Bitte beachten Sie, dass eingehende Kommentare vor der Veröffentlichung auf die Einhaltung der <a tal:attributes="href string:${context/portal_url/getPortalPath}/ueberuns/benutzerrichtlinien" class="internal-link" i18n:name="benutzerrichtlinien" i18n:translate="benutzerrichtlinien">Benutzerrichtlinien</a> geprüft werden. Aus diesem Grund können 1 bis 3 Werktage vergehen, bis Ihr Kommentar auf <span tal:replace="view/portal_title" i18n:name="portal_title">recensio.net</span> sichtbar wird. Darüber hinaus gibt es die Möglichkeit, der Redaktion als problematisch empfundene Äußerungen über einen neben Kommentaren befindlichen Button zu melden.
+<br />
+Für Rückfragen steht Ihnen die <a tal:attributes="href string:${context/portal_url/getPortalPath}/ueber-uns/kontakt" class="internal-link" i18n:name="portal_editorial" i18n:translate="portal_editorial"><span tal:replace="view/portal_title" i18n:name="portal_title">recensio.net</span>-Redaktion</a> jederzeit zur Verfügung.
+</p>
+        </div>
+        <fieldset>
+
+            <legend i18n:translate="label_add_comment">Add comment</legend>
+            <p i18n:translate="description_add_comment">
+                You can add a comment by filling out the form below. Plain text
+                formatting.
+            </p>
+
+            <div tal:replace="structure view/form/render" />
+            <p i18n:translate="help_comment_licence"> All comments are
+published under the creative-commons-licence
+Attribution-NonCommercial-NoDerivs (CC-BY-NC-ND)</p>
+        </fieldset>
+
+    </div>
+
+    <a name="commenting" />
+
+</tal:block>
+</tal:block>
